; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_proc_info.c_proc_pidtaskinfo.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_proc_info.c_proc_pidtaskinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.proc_taskinfo = type { i32 }
%struct.proc_taskinfo_internal = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proc_pidtaskinfo(%struct.TYPE_3__* %0, %struct.proc_taskinfo* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.proc_taskinfo*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store %struct.proc_taskinfo* %1, %struct.proc_taskinfo** %4, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %5, align 4
  %9 = load %struct.proc_taskinfo*, %struct.proc_taskinfo** %4, align 8
  %10 = call i32 @bzero(%struct.proc_taskinfo* %9, i32 4)
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.proc_taskinfo*, %struct.proc_taskinfo** %4, align 8
  %13 = bitcast %struct.proc_taskinfo* %12 to %struct.proc_taskinfo_internal*
  %14 = call i32 @fill_taskprocinfo(i32 %11, %struct.proc_taskinfo_internal* %13)
  ret i32 0
}

declare dso_local i32 @bzero(%struct.proc_taskinfo*, i32) #1

declare dso_local i32 @fill_taskprocinfo(i32, %struct.proc_taskinfo_internal*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
